--- a/node/views/success.hbs
+++ b/node/views/success.hbs
@@ -3,7 +3,7 @@
 <div class="content">
   <div class="success">
     <h3>Success</h3>
-    <p>Record for {{hostname}} ({{ip}}) created</p>
-    <p>Return to the <a href="/listing">listing</a></p>
+    <p>Record for {{hostname}} ({{ip}}) {{coe}} </p>
+    <p>Return to the <a href="/list">listing</a></p>
   </div>
 </div>
