--- a/node/views/edit.hbs
+++ b/node/views/edit.hbs
@@ -1,46 +1,70 @@
 {{!< default}}
 
 <div class="content">
-{{#if failure}}
-  <div class="failure">Please check your inputs</div>
-{{/if}}
   <form action="/edit" method="post">
     <table>
       <tr>
-        <td><label for="nick">Nickname</label></td>
-        <td><input type="text" name="nick"{{#if failure}}value='{{data.nick}}'{{/if}} /></td>
+        <td>
+          <label for="nick">Nickname</label>
+        </td>
+        <td>
+          <input type="text" name="nick"{{#if data}} value='{{data.nick}}'{{/if}} />
+        </td>
         {{#if failure}}
         {{#if nick}}
-        <td><span>No nickname given</span></td>
+        <td><span>bad nickname</span></td>
         {{else}}
         <td>&nbsp;</td>
         {{/if}}
         {{/if}}
       </tr>
       <tr>
-        <td><label for="hostname">Hostname</label></td>
-        <td><input type="text" name="hostname"{{#if failure}}value='{{data.hostname}}'{{/if}} /></td>
+        <td>
+          <label for="hostname">Hostname</label>
+        </td>
+        <td>
+          <input type="text" name="hostname"{{#if data}} value='{{data.hostname}}'{{/if}} />
+        </td>
         {{#if failure}}
         {{#if hostname}}
-        <td><span>No hostname given</span></td>
+        <td><span>bad hostname</span></td>
         {{else}}
         <td>&nbsp;</td>
         {{/if}}
         {{/if}}
       </tr>
       <tr>
-        <td><label for="ip">IP address</label></td>
-        <td><input type="text" name="ip"{{#if failure}}value='{{data.ip}}'{{/if}} /></td>
+        <td>
+          <label for="ip">IP address</label>
+        </td>
+        <td>
+          <input type="text" name="ip"{{#if data}} value='{{data.ip}}'{{/if}} />
+        </td>
         {{#if failure}}
         {{#if ip}}
-        <td><span>Invalid IP address</span></td>
+        <td><span>bad IP</span></td>
         {{else}}
         <td>&nbsp;</td>
-        {{/if}}{{/if}}
+        {{/if}}
+        {{/if}}
       </tr>
       <tr>
+        <td>
+          <label for="ip">MAC address</label>
+        </td>
+        <td>
+          <input type="text" name="mac"{{#if data}} value='{{data.mac}}'{{/if}} />
+        </td>
+        {{#if failure}}
+        {{#if mac}}
+        <td><span>bad MAC</span></td>
+        {{else}}
         <td>&nbsp;</td>
-        <td><input type="submit" value="Submit" /><a href="/listing">Cancel</a></td>
+        {{/if}}
+        {{/if}}
+      <tr>
+        <td>&nbsp;</td>
+        <td><input type="submit" value="Submit" /> <a href="/list">Cancel</a></td>
       </tr>
     </table>
   </form>
