--- a/node/views/row.hbs
+++ b/node/views/row.hbs
@@ -2,6 +2,6 @@
   <td>{{hostname}}</td>
   <td>{{ip}}</td>
   <td>{{mac}}</td>
-  <td><a href="/edit/{{ip}}">Edit</a></td>
-  <td><a href="/delete/{{ip}}">Delete</a></td>
+  <td><a href="/edit/{{_id}}">Edit</a></td>
+  <td><a href="/delete/{{_id}}">Delete</a></td>
 </tr>
