--- a/node/views/delete.hbs
+++ b/node/views/delete.hbs
@@ -3,7 +3,7 @@
   <div>
     <h3>Are you sure you want to delete {{hostname}} ({{ip}})?</h3>
     <p>
-      <span><a href="/delete/{{ip}}/confirm">Confirm</a> <a href="/listing">Cancel</a></span>
+      <span><a href="/delete/{{_id}}/confirm">Confirm</a> <a href="/list">Cancel</a></span>
     </p>
   </div>
 </div>
